# physics-prakt-project1

code/: CMakeLists.txt  dydx.cpp  dydx.h  in2.txt  integration.cpp  integration.h  main.cpp  main.h  quantities.cpp  quantities.h  vector.cpp  vector.h
code/scripts/: nbody-2.py  nbody-3.py  nbody-tests.py  nbody.py
protokoll/: auswertung.tex  classheader.tex  einleitung.tex  mathheader.tex  nbody.tex
